--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.13.0",
     "next": "14.2.2",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.13.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18"
