--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.13.0",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@tanstack/react-query": "^5.32.1",
+    "framer-motion": "^11.1.9",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "prisma": "^5.13.0",
