--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-confetti-explosion": "^2.1.2",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
